(fix): `.card` elements are clipping on mobile
By adding some margin bottom, this has been semi-resolved. (some
devices still kinda bugged, still works on most mobile phones i've
tested in my web browser)
Commit also changes the CSS of `.tabcontent` so that phones will utilize
more width in the "user-view".

--- a/api_express/public/style.css
+++ b/api_express/public/style.css
@@ -214,7 +214,6 @@ main {
     }
 }
 .tabcontent{
-    width:90%;
     padding:4%;
     margin-left: auto; margin-right: auto; 
 }
@@ -431,6 +430,9 @@ main {
             width: 100%;
         }
     }
+}
+.card:last-of-type{
+    margin-bottom:10vh;
 }
 .card.blue{
     background: var(--card-blue);
